k8s-files/ns-devops.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: devops-poc
spec: {}
status: {}
