k8s-files/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: devops
  name: devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: devops
    spec:
      containers:
      - image: nginx:alpine
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
status: {}
