k8s-files/service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: my-app
  name: my-app
  namespace: devops-poc
spec:
  ports:
  - name: http
    port: 443
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: HTTPS
    targetPort: 80
  selector:
    app: my-app
  type: LoadBalancer
status:
  loadBalancer: {}
