k8s-files/test-se.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: devops
  name: devops
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: devops
  type: LoadBalancer
status:
  loadBalancer: {}
# test slack
