k8s-files/ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: devops-poc
  name: service-my-app
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: my-app
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: devops-poc
  name: ingress-my-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: service-my-app
              servicePort: 80
